<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Appathon</string>
    <string name="product_name">Ola Appathon</string>
    
    <!-- Menu Strings -->
    <string name="action_settings">Settings</string>
    <string name="action_rateapp">Rate App</string>
    <string name="action_refresh">Refresh</string>
    <string name="hello_world">Hello world!</string>
    <string name="common_set">Set</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_ok">OK</string>
    <string name="common_set_time">Set Time</string>
    <string name="common_starts">Starts</string>
    <string name="app_transparency_choose">Choose</string>
    <string name="common_ends">Ends</string>
    <string name="common_days">Days</string>
    <string name="common_add">Add</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_continue">Continue</string>
    <string name="common_delete">Delete</string>
    <string name="common_success">Success</string>
    <string name="common_failed">Failed</string>
    <string name="common_duplicate">Duplicate</string>
    <string name="common_add_member_manually">Add member</string>
    <string name="common_exit">Exit</string>
    <string name="common_go_premium">Go Premium</string>
    <string name="common_network_error">Network Error</string>
    <string name="common_next">Next</string>
    <string name="common_next_button">Next</string>
    <string name="common_back">Back</string>
    <string name="common_done">Done</string>
    <string name="common_finish">Finish</string>
    <string name="common_settings">Settings</string>
    <string name="common_message">Message</string>
    <string name="common_name">Name</string>
    <string name="common_group_name">Group Name</string>
    <string name="common_submit_log">Submit Log</string>
    <string name="common_reset_settings">Reset Default Settings</string>
    <string name="common_first_name">First Name</string>
    <string name="common_close">Close</string>
    <string name="common_last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="common_confirm">Confirm</string>
    <string name="common_email_not_valid">Please enter a valid email address.</string>
    <string name="common_notnow">Not Now</string>
    <string name="common_alias">Alias</string>
    <string name="common_tel">tel:</string>
    <string name="common_loading">Loading. Please wait...</string>
    <string name="common_history">History</string>
    <string name="common_owner">Owner</string>
    <string name="common_apply">Apply</string>
    <string name="common_save">Save</string>
    <string name="common_skip">Skip</string>
    <string name="common_important">Important</string>
    <string name="common_dashboard">DASHBOARD</string>
    <string name="common_devices">Devices</string>
    <string name="empty_password">Password can not be blank.</string>
    <string name="sign_up">Sign Up</string>
    <string name="network_error">Check network connection.!!!</string>
    <string name="incorrect_email">Please enter valid email.</string>
    <string name="sign_in">Sign In</string>
    <string name="number">Number</string>
    <string name="create_account">Create Account</string>
    <string name="common_start_now">Start Now</string>
    <string name="common_your_location_is">Your Location is:\n %1$s %2$s\n%3$s</string>
    <string name="message_install_Google_play_services">For this feature to work, Google Play services app must be installed on your phone. Please install the app now and try again.</string>
    <string name="GOOGLE_PLAY_SERVICE_STORE_URL">https://play.google.com/store/apps/details?id=com.google.android.gms&amp;hl=en</string>

    <!-- Navigation Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>OLA DashBoard</item>
        <item>Tell a Friend</item>
        <item>Panic Help</item>
        <item>About Application</item>
        <item>Sign Out</item>
    </string-array>
    <string-array name="place_type">
        <item>airport</item>
        <item>atm</item>
        <item>bank</item>
        <item>bus_station</item>
        <item>church</item>
        <item>doctor</item>
        <item>hospital</item>
        <item>mosque</item>
        <item>movie_theater</item>
        <item>hindu_temple</item>
        <item>restaurant</item>
        <item>all</item>
    </string-array>
    <string-array name="place_type_name">
        <item>Airport</item>
        <item>ATM</item>
        <item>Bank</item>
        <item>Bus Station</item>
        <item>Church</item>
        <item>Doctor</item>
        <item>Hospital</item>
        <item>Mosque</item>
        <item>Movie Theater</item>
        <item>Hindu Temple</item>
        <item>Restaurant</item>
        <item>All</item>
    </string-array>

    <!-- List Item Icons(Images) with strings(text of company name) -->
    <!-- Keep them with titles array accordingly -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_launcher</item>
        <item>@drawable/tellafriend</item>
        <item>@drawable/help</item>
        <item>@drawable/about</item>
        <item>@drawable/signout</item>
        <item>@drawable/ic_launcher</item>
    </array>

    
    
    <string name="email_manager_share">Recommend Ola to friends and family</string>
    <string name="email_manager_share_email_subject">Check out Ola! </string>
    <string name="email_manager_share_email_body1">I just downloaded Ola.</string>
    <string name="email_manager_share_email_body2"> Great Application</string>
    <string name="email_manager_share_text_body">I just downloaded Ola.</string>
    <string name="email_manager_url">http://www.ola.com</string>
    <string name="email_manager_fb_twitter_link_staysafe">#chalonikalo</string>
    <string name="email_manager_fb_twitter_link_lovenewapps">#lovenewapps</string>
    <string name="email_manager_facebook_share_text_body">I just downloaded ola, great application.</string>
    <string name="email_verification">Email Verification</string>
    
    
    
    <!-- drawer_list_item Imageview Description -->
    <string name="description_list_icon">Item Icon</string>

</resources>