<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/tour_text"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:paddingTop="15dp"
            android:text="@string/sign_up"
            android:textColor="@color/slider_yellow"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@color/slider_yellow" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_gravity="left" />

        <EditText
            android:id="@+id/name"
            style="@style/edit_match_width_single_line"
            android:hint="@string/common_name"
            android:textColor="@color/text_color" />

        <EditText
            android:id="@+id/email"
            style="@style/edit_match_width_single_line"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:textColor="@color/text_color" />

        <EditText
            android:id="@+id/password"
            style="@style/edit_match_width_single_line"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:inputType="textPassword|textNoSuggestions"
            android:textColor="@color/text_color" />

        <EditText
            android:id="@+id/confirmPassword"
            style="@style/edit_match_width_single_line"
            android:layout_marginTop="10dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword|textNoSuggestions"
            android:textColor="@color/text_color" />

        <EditText
            android:id="@+id/number"
            style="@style/edit_match_width_single_line"
            android:layout_marginTop="10dp"
            android:hint="@string/number"
            android:inputType="number"
            android:textColor="@color/text_color" />

        <Button
            android:id="@+id/sign_in"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_orange_dark"
            android:onClick="onSignUpClick"
            android:text="@string/create_account"
            android:textAppearance="@style/bottom_button"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>