<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:layout_gravity="center_vertical"
    android:orientation="horizontal" >
    
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/tour_text"
            android:orientation="vertical"            
            android:paddingTop="50dp"
            android:padding="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:paddingTop="15dp"
                android:text="@string/sign_in"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/slider_yellow" />
  			<View
	            android:layout_width="match_parent"
	            android:layout_height="2dp"
	            android:layout_marginLeft="4dp"
	            android:layout_marginRight="4dp"
	            android:background="@color/slider_yellow" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_gravity="left" />

            <EditText
                android:id="@+id/email"
                style="@style/edit_match_width_single_line"
                android:hint="@string/email"
                android:inputType="textEmailAddress|textNoSuggestions"
                android:textColor="@color/text_color" />

            <EditText
                android:id="@+id/password"
                style="@style/edit_match_width_single_line"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:inputType="textPassword|textNoSuggestions"
                android:textColor="@color/text_color" />

            <Button
                android:id="@+id/sign_in"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_orange_dark"
                android:onClick="onSignInClick"
                android:text="@string/sign_in"
                android:textAppearance="@style/bottom_button"
                android:textColor="@android:color/white" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="Forgot Password"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="@color/text_color_hint" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="right"
                    android:clickable="true"
                    android:text="Contact Support"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="@color/text_color_hint" />
            </RelativeLayout>
        </LinearLayout>

</LinearLayout>
